WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304475
Text highlighting range is wrong for truncated RTL text.
https://bugs.webkit.org/show_bug.cgi?id=304475
Summary
Text highlighting range is wrong for truncated RTL text.
kyana0817
Reported
2025-12-18 22:33:49 PST
Created
attachment 477786
[details]
Reproducible File Attempting to select text when RTL text is truncated results in a discrepancy between the actually selected range and the highlighted text range. During this issue, copying saves the actually selected range to the clipboard. Reproduction steps: 1) Open the HTML file(bug-report.html) attached to this ticket. 2) Resize the window to make the text ellipsis. 3) Select the text. The expected behavior is for the actually selected range and the highlighted text range to match, even when omitted.
Attachments
Reproducible File
(565 bytes, text/html)
2025-12-18 22:33 PST
,
kyana0817
no flags
Details
Reference Image (Safari 26.2)
(402.22 KB, image/png)
2025-12-19 01:41 PST
,
Ahmad Saleem
no flags
Details
Auto-select test case
(392 bytes, text/html)
2025-12-19 09:31 PST
,
alan
no flags
Details
Patch
(11.02 KB, patch)
2025-12-19 20:36 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(11.11 KB, patch)
2025-12-20 05:26 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(11.11 KB, patch)
2025-12-20 05:28 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(11.11 KB, patch)
2025-12-20 06:48 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Ahmad Saleem
Comment 1
2025-12-19 01:41:59 PST
Created
attachment 477787
[details]
Reference Image (Safari 26.2)
Ahmad Saleem
Comment 2
2025-12-19 01:42:23 PST
It looks like selection painting, so going with Layout & Rendering component.
alan
Comment 3
2025-12-19 09:31:57 PST
Created
attachment 477796
[details]
Auto-select test case
alan
Comment 4
2025-12-19 20:36:18 PST
Created
attachment 477799
[details]
Patch
alan
Comment 5
2025-12-20 05:26:29 PST
Created
attachment 477800
[details]
Patch
alan
Comment 6
2025-12-20 05:28:07 PST
Created
attachment 477801
[details]
Patch
alan
Comment 7
2025-12-20 06:48:45 PST
Created
attachment 477804
[details]
[fast-cq]Patch
EWS
Comment 8
2025-12-20 09:32:42 PST
Committed
304821@main
(14e5876cdabb): <
https://commits.webkit.org/304821@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477804
[details]
.
Radar WebKit Bug Importer
Comment 9
2025-12-20 09:33:13 PST
<
rdar://problem/166944754
>
alan
Comment 10
2025-12-20 09:34:26 PST
Thank you for filling this bug (and great test case!). It is fixed now.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug