Text highlighting range is wrong for truncated RTL text. https://bugs.webkit.org/show_bug.cgi?id=304475

Reviewed by Antti Koivisto.

Expand on 263418@main by moving truncation handling over to TextBoxSelectableRange to
ensure all callers get correct start/end positions when RTL content is truncated.
(imported/w3c/web-platform-tests/css/css-ui/text-overflow-028.html now passes the selection
test too not just the painting one. -263418@main only fixed painting)

Tests: imported/w3c/web-platform-tests/css/css-ui/text-overflow-with-selection-ref.html
       imported/w3c/web-platform-tests/css/css-ui/text-overflow-with-selection.html

* LayoutTests/imported/w3c/web-platform-tests/css/css-ui/text-overflow-with-selection-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-ui/text-overflow-with-selection-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-ui/text-overflow-with-selection.html: Added.
* Source/WebCore/layout/integration/inline/InlineIteratorBoxModernPath.h:
(WebCore::InlineIterator::BoxModernPath::writingMode const):
(WebCore::InlineIterator::BoxModernPath::selectableRange const):
* Source/WebCore/layout/integration/inline/InlineIteratorBoxModernPathInlines.h:
(WebCore::InlineIterator::BoxModernPath::writingMode const): Deleted.
* Source/WebCore/rendering/TextBoxPainter.cpp:
(WebCore::TextBoxPainter::paintForegroundAndDecorations):
* Source/WebCore/rendering/TextBoxSelectableRange.h:
(WebCore::TextBoxSelectableRange::clamp const):

Canonical link: https://commits.webkit.org/304821@main