Source/WebCore/layout/integration/inline/InlineIteratorBoxModernPath.h
@@ -29,6 +29,7 @@
 #include <WebCore/InlineIteratorBoxLegacyPath.h>
 #include <WebCore/LayoutElementBox.h>
 #include <WebCore/LayoutIntegrationInlineContent.h>
+#include <WebCore/RenderBlockFlow.h>
 #include <WebCore/TextBoxSelectableRange.h>
 
 namespace WebCore {
@@ -57,7 +58,7 @@ public:
     FloatRect visualRectIgnoringBlockDirection() const { return box().visualRectIgnoringBlockDirection(); }
 
     inline bool isHorizontal() const;
-    inline WritingMode writingMode() const;
+    WritingMode writingMode() const { return box().writingMode(); }
     bool isLineBreak() const { return box().isLineBreak(); }
 
     unsigned minimumCaretOffset() const { return isText() ? start() : 0; }
@@ -90,7 +91,8 @@ public:
             length(),
             extraTrailingLength(),
             box.isLineBreak(),
-            textContent.partiallyVisibleContentLength()
+            textContent.partiallyVisibleContentLength(),
+            formattingContextRoot().writingMode().bidiDirection() != direction()
         };
     }
 
